--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node app.js",
+    "sonar": "node sonar-project.js"
   },
   "author": "debdeep",
   "license": "ISC",
@@ -24,6 +25,7 @@
     "mongoose": "^6.3.8",
     "nodemon": "^2.0.16",
     "pug": "^3.0.2",
+    "sonarqube-scanner": "^3.0.1",
     "stripe": "^9.16.0"
   }
 }
