added sonarqube file

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,4 @@
+registry=https://44.201.142.37:8081/repository/npm-repo/repository/npm/
+//https://44.201.142.37:8081/repository/npm-repo/repository/npm/:_authToken=${nexuslogin}
+always-auth=true
 email=ghosaldebdeep16@gmail.com
-//registry.npmjs.org/:_auth=YWRtaW46YWRtaW4=
