--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,5 @@
-registry=https://44.201.142.37:8081/repository/npm-repo/repository/npm/
-//https://44.201.142.37:8081/repository/npm-repo/repository/npm/:_authToken=${nexuslogin}
-always-auth=true
 email=ghosaldebdeep16@gmail.com
+#always-auth=true
+_auth=YWRtaW46YWRtaW4=
+# //registry.npmjs.org/:_auth=YWRtaW46ZGV2b3Bz
+allowRepublish=true
