--- a/config.env
+++ b/config.env
@@ -1,3 +1,3 @@
-JWT_LIFETIME=30d
-JWT_SECRET=secret
-MONGO_URI=mongodb+srv://Debdeep:12345@cluster0.8wecr.mongodb.net/BOOKBAY?retryWrites=true&w=majority
+JWT_LIFETIME=
+JWT_SECRET=
+MONGO_URI=
